# BETAgent

./: README.md  pyproject.toml
bet_analysis_outputs/: BEtagent_research_20251223_191825.txt  bet_result_AAPL_MSFT_20251223_141805.json  bet_result_AAPL_MSFT_20251223_141805.txt  ticker_history_6months.csv  ticker_history_daily.csv  ticker_history_hourly.csv
src/: __init__.py
src/BETagent/: ai_agent.py  bet.py  getdata.py  gettickerhistory.py  run_analysis_pipeline.py
src/BETfinance/: BETfinance.py
tests/: __init__.py  test_finance.py
